--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "django-debug-toolbar ~= 6.0",
     "django-polymorphic ~= 4.1",
     "pgpy13 ~= 0.6.1rc1",
+    "rsa>=4.9.1",
 ]
 
 [tool.setuptools]
